# Fish-feeder-in-C

./: README.md
2024-2025_fish_C/: CMakeLists.txt  FeedSchedule.txt  README.txt  fish.c  fish.h  fish_debug.c  main.c
2024-2025_fish_C/FishFeederGUI/: .classpath  .project
2024-2025_fish_C/FishFeederGUI/customjre/: release
